--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -4,7 +4,8 @@ body{font-family:Microsoft YaHei;}
 *{margin:0;padding:0;border:0;}
 /*------------------------------------------------header--------------------------------------------*/
 .header1
-{width:100%;
+{
+width:100%;
 height:4px;
 background-image:url(../images/Nav-01.gif);
 background-repeat:repeat;
@@ -19,46 +20,60 @@ box-shadow:0 -1px 1px #BECACF inset;
 {width:1160px;
 height:100%;
 margin:0 auto;
-}
-.header2a a
-{color:#000;
-}
-.header2a a>dt:hover{color:#F30; text-decoration:underline;}
-.header2a dt
-{
-position:relative;
 font-size:12px;
 line-height:30px;
+
 }
-.header2a dt img
-{padding-top:5px;}
-#h1
+.header2a span
+{display:inline-block;}
+.header2a a:hover{color:#F30; text-decoration:underline;}
+#hd1 dl,#hd2 dl
+{ float:left; padding-right:15px;}
+.header2a dl dt
+{float:left;font-size:12px;line-height:30px;font-family:Microsoft YaHei; padding-right:4px;}
+#hd1
 {float:left;}
-#h2
+#hd2
 {float:right;}
-#h1 dt
-{float:left;
-padding-right:3px;
+.h1_span1
+{color:#F00;}
+.h1_span2
+{color:#000;}
+#h2
+{position:relative;border:1px solid transparent; border-bottom:none; height:28px;}
+#h2 dd
+{position:absolute; left:-1px; top:28px; z-index:100; width:250px; background-color:#FFF; border:1px solid #CCC; border-top:none; display:none;}
+#h2 dd li
+{float:left; padding:5px 5px;}
+#h1 dt img
+{
+transition:all 0.3s ease-in 0s;
+-moz-transition:all 0.3s ease-in 0s; /* Firefox 4 */
+-webkit-transition:all 0.3s ease-in 0s; /* Safari 和 Chrome */
+-o-transition:all 0.3s ease-in 0s; /* Opera */
 }
-#h2 dt
-{float:left;
-padding-right:5px;
+#h1 dt:hover img{transform:rotate(1080deg);
+-ms-transform:rotate(1080deg); 	/* IE 9 */
+-moz-transform:rotate(1080deg); 	/* Firefox */
+-webkit-transform:rotate(1080deg); /* Safari 和 Chrome */
+-o-transform:rotate(1080deg); 	/* Opera */
 }
-.header2a_dt1
-{margin-left:15px;
-margin-right:2px;}
-.header2a_dt2
-{color:#a0a0a0;}
-.header2a_dt3
-{color:#88898A;}
-.header2a_dt4
-{margin-left:10px;}
-.himg{margin-top:2px;}
-#hxuan1
-{width:15px;height:30px;}
-#hxuan1 img
-{position:absolute; top:3px; transition:all 2s ease;}
-#hxuan1:hover{transform:rotate(90deg); webkit-transform:rotate(90deg);}
+
+#hs1
+{
+transition:all 0.2s ease-in 0s;
+-moz-transition:all 0.2s ease-in 0s; /* Firefox 4 */
+-webkit-transition:all 0.2s ease-in 0s; /* Safari 和 Chrome */
+-o-transition:all 0.2s ease-in 0s; /* Opera */
+}
+#h2 dt:hover #hs1{transform:rotate(180deg);
+-ms-transform:rotate(180deg); 	/* IE 9 */
+-moz-transform:rotate(180deg); 	/* Firefox */
+-webkit-transform:rotate(180deg); /* Safari 和 Chrome */
+-o-transform:rotate(180deg); 	/* Opera */
+}
+
+
 
 /*------------------------------------------------Footer--------------------------------------------*/
 #footer {height:550px;font-size:14px;}
