--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -27,8 +27,10 @@ line-height:30px;
 .header2a span
 {display:inline-block;}
 .header2a a:hover{color:#F30; text-decoration:underline;}
-#hd1 dl,#hd2 dl
+#hd1 dl
 { float:left; padding-right:15px;}
+#hd2 dl
+{ float:left; padding-right:10px;}
 .header2a dl dt
 {float:left;font-size:12px;line-height:30px;font-family:Microsoft YaHei; padding-right:4px;}
 #hd1
@@ -36,15 +38,22 @@ line-height:30px;
 #hd2
 {float:right;}
 .h1_span1
-{color:#F00;}
+{color:#999;}
 .h1_span2
 {color:#000;}
 #h2
-{position:relative;border:1px solid transparent; border-bottom:none; height:28px;}
+{position:relative;border:1px solid transparent; border-bottom:none; height:29px;}
 #h2 dd
-{position:absolute; left:-1px; top:28px; z-index:100; width:250px; background-color:#FFF; border:1px solid #CCC; border-top:none; display:none;}
+{position:absolute; left:-1px; top:29px; z-index:100; width:250px; background-color:#FFF; border:1px solid #CCC; border-top:none; display:none;}
 #h2 dd li
 {float:left; padding:5px 5px;}
+#hd2 a
+{color:#000;}
+#hd2 a:hover{color:#F30; text-decoration:underline;}
+#h4
+{position:relative; border:1px solid transparent; border-bottom:none; width:88px; padding-left:5px; height:29px;}
+#h4 dd
+{position:absolute; top:29px; left:-1px; padding-left:19px; width:84px;; line-height:25px; background-color:#FFF; border:1px solid #000; z-index:100; display:none; border-top:none;}
 #h1 dt img
 {
 transition:all 0.3s ease-in 0s;
