--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -54,6 +54,17 @@ line-height:30px;
 {position:relative; border:1px solid transparent; border-bottom:none; width:88px; padding-left:5px; height:29px;}
 #h4 dd
 {position:absolute; top:29px; left:-1px; padding-left:19px; width:84px;; line-height:25px; background-color:#FFF; border:1px solid #000; z-index:100; display:none; border-top:none;}
+#h7
+{position:relative; border:1px solid transparent; border-bottom:none;}
+
+#h7 li
+{ padding:5px 10px 5px 0px; display:inline-block; float:left;}
+#h7 div
+{position:absolute; z-index:100; top:29px; right:-1px; width:300px; background-color:#FFF; display:none; border:1px solid #CCC; border-top:none;}
+#h7 div dt,#h7 div dd
+{width:300px; padding-left:5px;}
+#h7 div dt
+{color:#000; font-size:12px; font-weight:600;}
 #h1 dt img
 {
 transition:all 0.3s ease-in 0s;
@@ -82,6 +93,33 @@ transition:all 0.2s ease-in 0s;
 -o-transform:rotate(180deg); 	/* Opera */
 }
 
+#hs2
+{
+transition:all 0.2s ease-in 0s;
+-moz-transition:all 0.2s ease-in 0s; /* Firefox 4 */
+-webkit-transition:all 0.2s ease-in 0s; /* Safari 和 Chrome */
+-o-transition:all 0.2s ease-in 0s; /* Opera */
+}
+#h4 dt:hover #hs2{transform:rotate(180deg);
+-ms-transform:rotate(180deg); 	/* IE 9 */
+-moz-transform:rotate(180deg); 	/* Firefox */
+-webkit-transform:rotate(180deg); /* Safari 和 Chrome */
+-o-transform:rotate(180deg); 	/* Opera */
+}
+
+#hs3
+{
+transition:all 0.2s ease-in 0s;
+-moz-transition:all 0.2s ease-in 0s; /* Firefox 4 */
+-webkit-transition:all 0.2s ease-in 0s; /* Safari 和 Chrome */
+-o-transition:all 0.2s ease-in 0s; /* Opera */
+}
+#h7 dt:hover #hs3{transform:rotate(180deg);
+-ms-transform:rotate(180deg); 	/* IE 9 */
+-moz-transform:rotate(180deg); 	/* Firefox */
+-webkit-transform:rotate(180deg); /* Safari 和 Chrome */
+-o-transform:rotate(180deg); 	/* Opera */
+}
 
 
 /*------------------------------------------------Footer--------------------------------------------*/
