--- a/css/2_health.css
+++ b/css/2_health.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 #page,#content{width:100%}
+/*#page a:hover{text-decoration: underline;}*/
 .layout{width:1160px}
 #header,#content,#footer,.layout{margin: 0 auto}
 .col-main{float:left;width:100%;min-height:1px}
@@ -59,7 +60,8 @@
     color: #fff;
 }
 .lf-index-slide a.item-list:hover{
-    color:#FF6F00;
+    color:#FF6600;
+    text-decoration: underline;
 }
   .lf-title a.item-title {
     width: 200px;
@@ -86,8 +88,8 @@
     background: url("../images/jj_01.jpg") 0 100% no-repeat;
     padding-left: 30px;
 }
-.lf-title .item-other a.link1:hover {
-    text-decoration: none;
+.lf-title .item-other a.link1 i {
+    color: #777;
 }
 .lf-title .item-other a.link1 span{
     color: #FF6F00;
@@ -101,18 +103,32 @@
     position: absolute;
     display: inline-block;
     background: #FFF;
-    border-right: 1px solid #F4F4F4;
-    border-left: 1px solid #F4F4F4;
+    border-right: 1px solid #E8E8E8;
+    border-left: 1px solid #E8E8E8;
     width: 228px;
     z-index: 102;
 }
 .lf-index-slide .lf-category dl dt h2 {
-    font-size: 14px;
-    line-height: 14px;
-    color: #fff;
-    font-weight: bold;
-    padding-top: 18px;
-    padding-bottom: 10px;
+    font-size: 18px;
+    line-height: 18px;
+    font-weight: 500;
+    color: #000;
+    padding: 10px 0;
+}
+.lf-index-slide .lf-category dl dt p {
+    width: 219px;
+    margin-left: -12px;
+}
+.lf-index-slide .lf-category dl dt a {
+    display: inline-block;
+    margin-bottom: 5px;
+    margin-right: 8px;
+    width: 4.5em;
+    font-weight: normal;
+    color: #666;
+}
+.lf-index-slide .lf-category dl dt a:hover {
+    color: #FF6600;
 }
 .lf-index-slide .lf-category dl.first {
     border-top: 0;
@@ -120,9 +136,33 @@
 .lf-index-slide .lf-category dl {
     position: relative;
     color: #fff;
-    padding: 0;
-    padding: 0 16px 0 30px;
-    height: 94px;
+    padding: 0 10px 0 30px;
+    height: 81px;
+    overflow: hidden;
+}
+.lf-catagory-index-1, .lf-catagory-index-2, .lf-catagory-index-3, .lf-catagory-index-4, .lf-catagory-index-5, .lf-catagory-index-6{
+    border-bottom: 1px solid #E8E8E8;
+}
+.lf-catagory-index-7{border-bottom: 6px solid #FF6600;}
+.lf-index-slide .lf-category dl.hover {
+    background: #40205f;
+    transition: background .5s ease-out;
+}
+.lf-index-slide .lf-category dl.hover::before {
+    width: 3px;
+    opacity: 1;
+}
+.lf-index-slide .lf-category dl::before {
+    position: absolute;
+    content: '';
+    left: 0;
+    top: -1px;
+    bottom: 0;
+    width: 0;
+    background: #40205f;
+    z-index: 101;
+    opacity: 0;
+    transition: all .15s ease-out;
 }
 /*焦点图*/
 .lf-slide-box {
@@ -202,6 +242,7 @@ h1 {
 }
 .life-title a:hover{
     color:#FF6600;
+    text-decoration: underline;
 }
 
 
@@ -234,6 +275,85 @@ h1 {
     right: 0;
     top: 7px;
     color: #333;
+}
+.lf-referral-items{
+    width: 100%;
+    height:178px;
+}
+.lf-referral-item{
+    width:17.5%;
+    height:158px;
+    margin: 10px 0;
+    padding:0 11px;
+    overflow: hidden;
+    float: left;
+    border-right: 1px dashed #ccc;
+}
+.lf-referral-item1{
+    width:17.5%;
+    height:158px;
+    margin: 10px 0;
+    padding:0 11px;
+    overflow: hidden;
+    float: left;
+}
+.lf-referral-info{
+    position: relative;
+    height: 60px;
+    margin-bottom: 10px;
+}
+.lf-referral-info img{
+    position: absolute;
+    width: 60px;
+    height: 60px;
+    left: 5px;
+    border: 1px solid #F4F4F4;
+    border-radius: 50%;
+}
+.lf-referral-info p {
+    color: #000;
+    font-weight: bold;
+    line-height: 30px;
+    margin-left: 75px;
+    overflow: hidden;
+}
+.lf-referral-info span {
+    color: #666;
+    line-height: 30px;
+    margin-left: 75px;
+    overflow: hidden;
+}
+.lf-referral-it a{
+    color:#666;
+    line-height: 23px;
+    padding-right:7px;
+}
+.lf-referral-it a:hover{
+    color:#FF6600;
+    text-decoration: underline;
+}
+/*----left-nav-----*/
+.lf-category dl dd.double {
+    width: 685px;
+}
+.lf-category dl.lf-catagory-index-1 dd {
+    top: 0;
+}
+.lf-category dl.hover dd {
+    display: block;
+}
+.lf-category dl dd {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 209.4px;
+    z-index: 101;
+    min-height: 436px;
+    _height: 436px;
+    background: #fff;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+    padding: 30px 0 4px 30px;
+    z-index: 98;
 }
 /*-------------prat2-------------*/
 .life-category-content{
@@ -294,6 +414,23 @@ h1 {
     padding: 10px 0;
     display: block;
     text-align: center;
+}
+.life-skin-left{
+    width: 186px;
+    height: 233px;
+    float:left;
+}
+.life-skin-right{
+    width: 522px;
+    height: 233px;
+    float:left;
+    padding-left:16px;
+}
+.life-skin-right p{
+    margin-left: 80px;
+}
+.life-skin-right img{
+    border: 1px solid #ccc;
 }
 /*-------------prat3 and prat4-------------*/
 .life-category-content1{
@@ -554,6 +691,7 @@ h1 {
     width: 60px;
     height: 60px;
     left: 0;
+    border: 1px solid #F4F4F4;
     border-radius: 50%;
 }
 .life-popular-info p {
