--- a/css/2_help.css
+++ b/css/2_help.css
@@ -1,10 +1,14 @@
-body, p, form, input, button, dl, dt, dd, ul, ol, li, h1, h2, h3, h4 {
+@charset "utf-8";
+/*life CSS Document */
+
+/*CSS Reset*/
+body, p, form, input, button, dl, dt, dd, ul, ol, li, h1, h2, h3 {
     margin: 0;
     padding: 0;
     list-style: none;
 }
 body{
-    font: 12px "微软雅黑",Helvetica,sans-serif;
+    font: 12px "Microsoft YaHei",Helvetica,sans-serif;
     color: #333;
 }
 img {
