--- a/css/header_footer.css
+++ b/css/header_footer.css
@@ -42,25 +42,25 @@ line-height:30px;
 .h1_span2
 {color:#000;}
 #h2
-{position:relative;border:1px solid transparent; border-bottom:none; height:29px;}
+{position:relative;border:1px solid transparent; border-bottom:none; height:28px;}
 #h2 dd
-{position:absolute; left:-1px; top:29px; z-index:100; width:250px; background-color:#FFF; border:1px solid #CCC; border-top:none; display:none;}
+{position:absolute; left:-1px; top:28px; z-index:100; width:250px; background-color:#FFF; border:1px solid #CCC; border-top:none; display:none;}
 #h2 dd li
 {float:left; padding:5px 5px;}
 #hd2 a
 {color:#000;}
 #hd2 a:hover{color:#F30; text-decoration:underline;}
 #h4
-{position:relative; border:1px solid transparent; border-bottom:none; width:88px; padding-left:5px; height:29px;}
+{position:relative; border:1px solid transparent; border-bottom:none; width:88px; padding-left:5px; height:28px;}
 #h4 dd
-{position:absolute; top:29px; left:-1px; padding-left:19px; width:84px;; line-height:25px; background-color:#FFF; border:1px solid #000; z-index:100; display:none; border-top:none;}
+{position:absolute; top:28px; left:-1px; padding-left:19px; width:84px;; line-height:25px; background-color:#FFF; border:1px solid #000; z-index:100; display:none; border-top:none;}
 #h7
-{position:relative; border:1px solid transparent; border-bottom:none;}
+{position:relative; border:1px solid transparent; border-bottom:none;height:28px;}
 
 #h7 li
 { padding:5px 10px 5px 0px; display:inline-block; float:left;}
 #h7 div
-{position:absolute; z-index:100; top:29px; right:-1px; width:300px; background-color:#FFF; display:none; border:1px solid #CCC; border-top:none;}
+{position:absolute; z-index:100; top:28px; right:-1px; width:300px; background-color:#FFF; display:none; border:1px solid #CCC; border-top:none;}
 #h7 div dt,#h7 div dd
 {width:300px; padding-left:5px;}
 #h7 div dt
@@ -120,6 +120,45 @@ transition:all 0.2s ease-in 0s;
 -webkit-transform:rotate(180deg); /* Safari 和 Chrome */
 -o-transform:rotate(180deg); 	/* Opera */
 }
+
+/*----------------------------------------------Generalise------------------------------------- */
+
+#header, #Content, #footer {width:100%;height:160px;background-color:#fff;}
+#life-nav, .headerLayout, /*.content,*/ .life-desc1, .life-intro {width:1160px;margin:0 auto;}
+
+/* ----------------------------------------------Header------------------------------------- */
+.headerLayout {padding-top:10px;}
+#header .headerCon {width: 1160px;position: relative;}
+
+#lifeLogo {width:390px;height:109px;line-height:64px;padding-top:18px;voerflow:hidden;float:left;cursor:auto;}
+#lifeLogo a {width:auto;height:109px;display:block;}
+
+#header .header-extra {overflow: visible;}
+.header-banner {width:200px;height:109px;float:right;padding-top:18px;cursor: auto;}
+.header-banner a{width:auto;height:109px;display:block;}
+
+#lifeSearch {float:left;width:490px !important;padding:40px 20px 0 0;-webkit-transform: translate3d(0, 0, 0);overflow: hidden;}
+.lifeSearch-form {border: solid #FF6600;border-width: 3px 0 3px 3px;overflow: hidden;}
+#lifeSearch fieldset {position: relative;}
+#lifeSearch legend {display: none;}
+legend {color: #000;}
+.lifeSearch-form fieldset,.lifeSearch-form img {border: 0;}
+#header #lifeSearch label, #header .s-combobox .s-combobox-input-wrap, #header #lifeSearch .s-combobox, #header .lifeSearch-input {height: 44px;line-height: 44px;font-size: 14px;}
+.lifeSearch-input {background: #fff;position: relative;}
+#lifeSearch label {max-width:90%;overflow:hidden;white-space:nowrap;position:absolute;left:8px;top:0px;z-index:1;visibility:hidden;color:#666;}
+.s-combobox {float:left;}
+.s-combobox .s-combobox-input-wrap {position: relative;vertical-align: middle;}
+#header #lifeSearch #mq {background: 0 0;height: 22px;line-height: 22px;}
+#lifeSearch #mq {color:#000;padding: 13px 0 13px 5px;outline:0;border:0;font-weight:900;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box;}
+#mq {width: 430px !important;position: static;}
+.s-combobox-input {border-radius:2px 0 0 2px;font-size:100%;vertical-align:middle;overflow-y:visible;}
+input, textarea, select {*font-size:100%;font-family:inherit;}
+
+#lifeSearch button {width: 52px;height: 45px;line-height: 45px;cursor: pointer;color:#FF6600;background-color: #FF6600;}
+.hot-query {width:100%;height:18px;overflow:hidden;margin-left:10px;padding-top:6px;}
+.hot-query li {display: inline-block;line-height: 1.1;color:#666;padding:0 2px;}
+.hot-query li a{color:#666;}
+.hot-query li a:hover,.life-intro a:active {color:#FF6600;text-decoration:underline;}
 
 
 /*------------------------------------------------Footer--------------------------------------------*/
